# saskan-calendar

./: .gitignore  AUTHORS.md  CLAUDE.md  CONTRIBUTING.md  HISTORY.md  LICENSE  README.md  config.py  manage.py  pyproject.toml  region-snapshots  requirements.txt
app/: astro_events.json  core.py  discover_synths.py  io_music.py  kanka_spin.json  lang_converter_debug.py  make_music.py  mb_compose.py  mb_files.py  mb_themes.py  mb_tools.py  method_files.py  method_shell.py  musebox.py  music_core.py  test_math.py
app/music/: mb_design.py  mb_themes.py  mb_tools.py  musebox.py  test_music.py
app_calendar/: core.py  find_dates.py  io_music.py  lang_converter.py  lang_converter_debug.py  music_core.py  test_math.py  xxx_mb_files.py
app_calendar/music/: discover_synths.py  load_m21_instruments.py  mb_compose.py  mb_design.py  mb_dictionary.py  mb_instruments.py  mb_tools.py  method_files.py  musebox.py  test_music.py
app_maps/: __init__.py  cli.py
app_maps/docs/: cli.md
app_maps/geo/: __init__.py
app_maps/graphs/: __init__.py
app_maps/saskan/: __init__.py  engine.py  map_utils.py  models.py  persistence.py  plotting.py  settings.py  sim.py
app_maps/saskan/renderers/: text.py
app_timeline/: __init__.py  cli.py  cli_data.py  cli_import_export.py  cli_list.py  cli_simulate.py  cli_update.py  config.py
app_timeline/db/: __init__.py  connection.py  schema.py
app_timeline/models/: __init__.py  base.py  entity.py  epoch.py  event.py  province.py  province_snapshot.py  region_snapshot.py  route.py  settlement.py
app_timeline/services/: __init__.py  base.py  entity_service.py  epoch_service.py  event_service.py  province_service.py  province_snapshot_service.py  region_service.py  region_snapshot_service.py  route_service.py  settlement_service.py  snapshot_service.py
app_timeline/simulation/: __init__.py  config.py  effects.py  engine.py  formulas.py  state.py
app_timeline/utils/: __init__.py  temporal.py  validation.py
config/timeline/: settings.yaml
data/: CompCompositionOne.pkl  CompDaves1stTest.pkl  CompDaves2ndTest.pkl  CompDavesAmazingComposition.pkl  CompDavesFirstScore.pkl  CompDavesSecondScore.pkl  CompDavesTest.json  inventory_translated.xlsx  log_musebox_2025-07-15.json  log_musebox_2025-07-15T18:20:00.131096-04:00.json  log_musebox_2025-07-16.json  log_musebox_2025-07-17.json  log_musebox_2025-07-18.json  log_musebox_2025-07-19.json  log_musebox_2025-07-20.json  log_musebox_2025-07-23.json  log_musebox_2025-07-30.json  log_musebox_2025-08-10.json  steps_musebox.json
data/calendar/: inventario.ods  inventory_translated_test_15_rows.xlsx  lore_events.json  moons_data.json
data/timeline/: test_export.json
data/timeline/exports/: all_20251231_155748.json  all_20251231_163618.json  all_20251231_164034.json  epoch_export.json  region_snapshots_20251231_163610.json
docs/: Summary.md
docs/calendar/: README.md
docs/maps/: SALVAGE.md
docs/timeline/: README.md  TECHNICAL.md
shared/: __init__.py
shared/utils/: __init__.py  file_io.py  shell.py
snips/: musebox.py  music_core.py
tests/: test_moons.py  test_wanderers.py
tests/calendar/: test_calendars.py  test_moons.py  test_udt.py  test_wanderers.py
tests/timeline/: conftest.py  test_cli_data.py  test_cli_import_export.py  test_cli_list.py  test_cli_simulate.py  test_cli_update.py  test_config.py  test_db.py  test_models.py  test_services.py  test_services.py.old  test_simulation_engine.py  test_simulation_formulas.py  test_snapshot_services.py  test_temporal.py  test_validation.py
(+15 files in other folders)
