[tool.poetry]
name = "saskan-calendar"
version = "0.1.0"
description = "A toy app with semi-structured build and release workflow."
authors = [
    "Genuine Merit <genuinemerit@pm.me>",
    "David Stitt <david.stitt@pm.me>",
    "Pfenix Quinn <rfw_pq@pm.me>"
    ]
license = "MIT"
readme = "README.md"
packages = [
    { include = "app" },
    { include = "experiments" },
]

# Optional metadata for future PyPI publishing
homepage = "https://github.com/genuinemerit/saskan-calendar"
repository = "https://github.com/genuinemerit/saskan-calendar"
keywords = ["flask", "ledger", "postgresql", "sqlite", "poetry", "build", "release"]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
flask = "^2.3"
flask-login = "^0.6"
flask-bcrypt = "^1.0"
flask-wtf = "^0.14"
flask-cors = "^6.0"
flask-sqlalchemy = "^3.1"
flask-babel = "^3.1"
numpy = "^1.26"
sqlalchemy = "^2.0"
sqlalchemy-utils = "^0.41"
wtforms = "^2.3"
requests = "^2.32"
openai = "^1.64"
python-slugify = "^8.0"
prettyprinter = "^0.18"
markdown = "^3.7"
bcrypt = "^3.1"
python-dotenv = "^1.1.0"
pandas = "^2.3.0"
pendulum = "^3.1.0"
numbers-parser = "^4.15.1"
music21 = "^9.7.1"
tabulate = "^0.9.0"
colorama = "^0.4.6"
langdetect = "^1.0.9"
odfpy = "^1.4.1"
openpyxl = "^3.1.5"
networkx = "^3"
typer = "^0.20.1"
matplotlib = "^3.10.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-flask = "^1.3"
pytest-html = "^4.1"
pytest-sqlalchemy = "^0.2"
pytest-playwright = "^0.7"
pytest-mock = "^3.14"
flask-testing = "^0.8"
playwright = "^1.50"
locust = "^2.32"
black = "^24.4"
isort = "^5.13"

[tool.poetry.scripts]
saskan-calendar = "scripts.manage:cli"
saskan-experiments = "experiments.cli:app"

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
