[tool.poetry]
name = "saskan-calendar"   # This is a project name, but not an app name
version = "0.1.0"
description = "Experimental sub-apps for the Saskan Lands."
authors = [
    "Genuine Merit <genuinemerit@pm.me>",
    "David Stitt <david.stitt@pm.me>",
    "Pfenix Quinn <rfw_pq@pm.me>"
    ]
license = "MIT"
readme = "README.md"
packages = [
    { include = "app_calendar" },
    { include = "app_maps" },
    { include = "app_timeline" },
]

# Optional metadata for future PyPI publishing
homepage = "https://github.com/genuinemerit/saskan-calendar"
repository = "https://github.com/genuinemerit/saskan-calendar"
keywords = ["calendar", "simulation", "worldbuilding", "astronomy", "music", "maps", "timeline"]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
numpy = "^1.26"
openai = "^1.64"
python-dotenv = "^1.1.0"
pandas = "^2.3.0"
pendulum = "^3.1.0"
numbers-parser = "^4.15.1"
music21 = "^9.7.1"
tabulate = "^0.9.0"
colorama = "^0.4.6"
langdetect = "^1.0.9"
odfpy = "^1.4.1"
openpyxl = "^3.1.5"
networkx = "^3"
typer = "^0.20.1"
matplotlib = "^3.10.8"
sqlalchemy = "^2.0"
pyyaml = "^6.0"
rich = "^13.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-html = "^4.1"
pytest-mock = "^3.14"
black = "^24.4"
isort = "^5.13"

[tool.poetry.scripts]
saskan-calendar = "scripts.manage:cli"
saskan-experiments = "experiments.cli:app"
saskan-timeline = "app_timeline.cli:app"

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
